--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,11 +20,25 @@
 
 <section class="education-section fade-in">
     <div class="education-container">
-        <h1 class="section-header">
-            Education
+        <h1 class="section-header" style="font-family: 'Libre Baskerville', serif;">
+            About Me
         </h1>
-        <p>
-            I am a Northeastern University Student (Class of 2021) studying Computer Science and Philosophy with a minor in Computational Social Sciences. My interests include....
+        <p class="about-me-p">
+            I am a Northeastern University Student (Class of 2021) studying Computer Science and Philosophy with a minor in Computational Social Sciences. I am interested in <select class="about-me-select">
+                <option>creating websites</option>
+                <option>using data to make decisions</option>
+                <option>fitness,</option>
+                <option>reading</option>
+            </select>. I am skilled at <select class="about-me-select">
+                <option>HTML/CSS</option>
+                <option>Javascript</option>
+                <option> Python</option>
+                <option>Java</option>
+                <option>Google Apps Scripts</option>
+                <option>Github</option> 
+                <option>Database Design</option>
+                <option>PostgreSQL</option> </select>. 
+                
         </p>
     </div>
 </section>
