--- a/app/templates/nav-menu.html
+++ b/app/templates/nav-menu.html
@@ -7,8 +7,10 @@
             <div class="nav-items">
                 <div class="nav-wrapper">
                     <nav role="navigation" class="nav-items-in-menu">
-                        <a href="{{ url_for('index')}}" aria-current="page" class="home-button">HOME</a>
-                        <a href='/' aria-current="page" class="about-button">ABOUT</a>
+                        <a href='#education-container' aria-current="page" class="about-button">ABOUT</a>
+                        <a href='#experience-section' aria-current="page" class="about-button">EXPERIENCE</a>
+                        <a href='#projects-section' aria-current="page" class="about-button">PROJECTS</a>
+                        <a href="www.linkedin.com/in/sam-merkovitz" aria-current="page" class="about-button" target="__blank">LINKEDIN</a>
                     </nav>
                 </div>
             </div>
