--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,18 +18,21 @@
 </section>
 
 
-<section class="education-section fade-in">
-    <div class="education-container">
+<section class="education-section fade-in" id="education-container">
+    <div class="education-container" >
         <h1 class="section-header" style="font-family: 'Libre Baskerville', serif;">
             About Me
         </h1>
         <p class="about-me-p">
-            I am a Northeastern University Student (Class of 2021) studying Computer Science and Philosophy with a minor in Computational Social Sciences. I am interested in <select class="about-me-select">
-                <option>creating websites</option>
-                <option>using data to make decisions</option>
-                <option>fitness,</option>
-                <option>reading</option>
-            </select>. I am skilled at <select class="about-me-select">
+            I am a Northeastern University Student (Class of 2021) studying Computer Science and Philosophy with a minor in Computational Social Sciences. I am interested in 
+            <select class="about-me-select">
+                <option value="1">creating websites</option>
+                <option value="2">using data to make decisions</option>
+                <option value="3">fitness</option>
+                <option value="4">reading</option>
+            </select>. 
+            I am skilled at 
+            <select class="about-me-select">
                 <option>HTML/CSS</option>
                 <option>Javascript</option>
                 <option> Python</option>
@@ -37,13 +40,13 @@
                 <option>Google Apps Scripts</option>
                 <option>Github</option> 
                 <option>Database Design</option>
-                <option>PostgreSQL</option> </select>. 
-                
+                <option>PostgreSQL</option> 
+            </select>. 
         </p>
     </div>
 </section>
 
-<section>
+<section class="experience-section" id="experience-section">
     <div class="experience-container fade-in">
         <h1 class="section-header">
             Experience
@@ -60,52 +63,49 @@
     </div>
 </section>
 
-<section class="projects-section fade-in">
-    <div class="projects-container">
+
+<section class="projects-tab fade-in" id="projects-section">
+    <div> 
         <h1 class="section-header">
             Projects
         </h1>
-        <div class="projects-grid-container">
-            <div class="grid-projects-item1">
-                <div class='grid-item-wrapper'>
-                    <h4>
-                        Prediction College Basketball Game Winners using Machine Learning
-                    </h4>
-                    <p>
-                        Final Project for CS4100 - Artificial IntelligenceBased on Kaggle's March Madness Competition, created machine learning models to best predict the outcomes of college basketball games. Created four feature sets using available data from the competition according to different statistical models used for common analysis and prediction methods.Machine Learning models used: Logistic Regression, Random Forest, Naive Bayes, ANNLibraries Used: Pandas, Numpy, Matplot, Seaborn, Scikit Learn, Tensorflow
-                    </p>
-                </div>
-            </div>
-            <div class="grid-projects-item2">
-
-            </div>
-            <div class="grid-projects-item3">
-            </div>
-            <div class="grid-projects-item4">
-                <div class='grid-item-wrapper'>
-                    <h4>
-                        Boston Property Tax Dataset Analysis
-                    </h4>
-                    <p>
-                        Explored Boston Property Tax dataset from the Boston Area Research Initiative with intent of forming a public policy proposal based on findingsProposed a methodology to measure change in urbanization in Boston based on year-over-year changes in the dataset. Used ANOVA, Correlation/Pearson’s R, ggplot2, and other libraries in order to run analyses and create visualizations
-                    </p>
-                </div>
-            </div>
-            <div class="grid-projects-item5">
-                <div class='grid-item-wrapper'>
-                    <h4>
-                        World Happiness Ratings Analysis
-                    </h4>
-                    <p>
-                        Exploratory Data Analysis of the World Happiness Scores from a Kaggle dataset (linked in the python notebook). This project examines the relationship between category values and a country's happiness score. This project uses Economy/GDP ratings to examine this relationship.Libraries Used: Pandas, Numpy, Matplot, Seaborn
-                    </p>
-            </div>
-            </div>
-            <div class="grid-projects-item6">
-            
-            </div>
-
+    </div>
+    <br />
+    <br />
+    <br />
+    <div class="tabs">
+        <div class="tab-header">
+            <div class="active" id="first-tab">College Basketball</div>
+            <div id="second-tab">Property Tax</div>
+            <div id="third-tab">World Happiness</div>
         </div>
+        <div class="tab-content">
+            <div class="active" id="first-tab-div" style="color: black;">
+                <h4>
+                    Predicting College Basketball Game Winners using Machine Learning
+                </h4>
+                <p>
+                    Final Project for CS4100 - Artificial IntelligenceBased on Kaggle's March Madness Competition, created machine learning models to best predict the outcomes of college basketball games. Created four feature sets using available data from the competition according to different statistical models used for common analysis and prediction methods.Machine Learning models used: Logistic Regression, Random Forest, Naive Bayes, ANNLibraries Used: Pandas, Numpy, Matplot, Seaborn, Scikit Learn, Tensorflow
+                </p>
+                <a href="https://github.com/samMerkovitz/College-Basketball-Predictions" target="__blank"><img class="github"  src="../static/img/github logo.png" /></a>
+            </div>
+            <div id="second-tab-div">
+                <h4>
+                    Boston Property Tax Dataset Analysis
+                </h4>
+                <p>
+                    Explored Boston Property Tax dataset from the Boston Area Research Initiative with intent of forming a public policy proposal based on findingsProposed a methodology to measure change in urbanization in Boston based on year-over-year changes in the dataset. Used ANOVA, Correlation/Pearson’s R, ggplot2, and other libraries in order to run analyses and create visualizations
+                </p>
+            </div>
+            <div id="third-tab-div">
+                <h4>
+                    World Happiness Ratings Analysis
+                </h4>
+                <p>
+                    Exploratory Data Analysis of the World Happiness Scores from a Kaggle dataset (linked in the python notebook). This project examines the relationship between category values and a country's happiness score. This project uses Economy/GDP ratings to examine this relationship.Libraries Used: Pandas, Numpy, Matplot, Seaborn
+                </p>
+                <a href="https://github.com/samMerkovitz/College-Basketball-Predictions" target="__blank"><img class="github"  src="../static/img/github logo.png" /></a>
+            </div>
     </div>
 </section>
 <!-- 
