changed background, added projects page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,7 @@
 </section>
 
 
-<section class="education-section fade-in" id="education-container">
+<section class="education-section" id="education-container">
     <div class="education-container" >
         <h1 class="section-header" style="font-family: 'Libre Baskerville', serif;">
             About Me
@@ -26,10 +26,10 @@
         <p class="about-me-p">
             I am a Northeastern University Student (Class of 2021) studying Computer Science and Philosophy with a minor in Computational Social Sciences. I am interested in 
             <select class="about-me-select">
-                <option value="1">creating websites</option>
-                <option value="2">using data to make decisions</option>
-                <option value="3">fitness</option>
-                <option value="4">reading</option>
+                <option>creating websites</option>
+                <option>using data to make decisions</option>
+                <option>fitness</option>
+                <option>reading</option>
             </select>. 
             I am skilled at 
             <select class="about-me-select">
@@ -42,12 +42,13 @@
                 <option>Database Design</option>
                 <option>PostgreSQL</option> 
             </select>. 
+
         </p>
     </div>
 </section>
 
 <section class="experience-section" id="experience-section">
-    <div class="experience-container fade-in">
+    <div class="experience-container">
         <h1 class="section-header">
             Experience
         </h1>
@@ -63,8 +64,7 @@
     </div>
 </section>
 
-
-<section class="projects-tab fade-in" id="projects-section">
+<section class="projects-tab" id="projects-section" style="display: none;">
     <div> 
         <h1 class="section-header">
             Projects
@@ -108,6 +108,10 @@
             </div>
     </div>
 </section>
+
+
+
+
 <!-- 
 <section class="tabbed-projects">
     <div class="accordion-container">
