--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -1,10 +1,12 @@
 body {
     font-family: Montserrat, sans-serif;
-    background-color: black;
+    background: linear-gradient(to bottom right, blue, 25%, pink);
     color: white;
     letter-spacing: 1px;
 
+
 }
+
 
 html {
     cursor: url('../img/hand-cursor.png'), auto;
@@ -98,7 +100,11 @@ footer {
     padding-right: 50px;
     padding-top: 30px;
     z-index: 1;
+    opacity: 1;
+    
 }
+
+
 
 .nav-items {
     align-self: stretch;
@@ -142,6 +148,36 @@ footer {
 .education-container {
     display: block;
     padding-right: 50px;
+}
+
+.projects-section {
+    margin-left: 30px;
+    margin-right: 30px;
+    
+
+}
+
+.projects-container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: 100%;
+    max-height: 800px;
+    max-width: 1140px;
+}
+
+.projects-header-wrapper {
+    margin-top: 100px;
+    margin-bottom: 140px;
+    text-align: center;
+
+}
+
+.page-title {
+    font-family: Montserrat, sans-serif;
+    font-size: 44px;
+    line-height: 62px;
+    font-weight: 200;
 }
 
 .experience-section {
@@ -247,7 +283,7 @@ footer {
     border: 0;
     border-bottom: 2px solid;
     border-bottom-color: white;
-    background-color: black;
+    background: transparent;
     color: white;
     
 }    
