--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -8,6 +8,16 @@
         <div class="projects-header-wrapper">
             <h1 class="page-title">Projects</h1>
         </div>
+        <div class="project-grid">
+            <div class="portfolio">
+                <div class="portfolio-item">one</div>
+                <div class="portfolio-item">two</div>
+                <div class="portfolio-item">three</div>
+                <div class="portfolio-item">four</div>
+                <div class="portfolio-item">five</div>
+                <div class="portfolio-item">six</div>
+            </div>
+        </div>
     </div>
 </section>
         
