added mobile sidenav

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -1,9 +1,12 @@
 body {
     font-family: Montserrat, sans-serif;
-    background: linear-gradient(to bottom right, blue, 25%, pink);
+    /* background: linear-gradient(to bottom right, blue, 25%, pink); */
     color: white;
     letter-spacing: 1px;
-
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab );
+	background-size: 400% 400%;
+	-webkit-animation: gradientBG 10s ease infinite;
+	        animation: gradientBG 10s ease infinite;
 
 }
 
@@ -90,14 +93,13 @@ footer {
 
 
 .nav-menu {
-    position: fixed;
+    position: absolute;
     top: 0;
     width: 100%;
     display: flex;
     align-items: center;
     justify-self: start;
     padding-left: 50px;
-    padding-right: 50px;
     padding-top: 30px;
     z-index: 1;
     opacity: 1;
@@ -112,6 +114,86 @@ footer {
     align-items: center;
     margin-right: auto;
 }
+
+.nav-items-in-menu {
+    display: flex;
+}
+
+.dropdown {
+    font-size: 2.4em;
+    line-height: 50px;
+    display: none;
+ }
+
+/* Style the dropdown content (hidden by default) */
+.dd-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+ .menu-icon {
+    display: none;
+    height: 40px;
+    width: 40px;
+}
+
+.menu-icon:hover {
+    cursor: url('../img/external.png'), auto;
+}
+
+
+
+
+@media (max-width: 768px) {
+    .nav-items-in-menu {
+        display: none;
+    }
+
+
+    .menu-icon {
+        
+        display: flex;
+    }
+
+}
+
+
+
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    background: linear-gradient(to bottom right, blue, 25%, pink);
+    display: block;
+    opacity: 0.7;
+  }
+  
+  .sidenav a {
+      display: block;
+  }
+
+  .sidenav a:hover {
+      text-decoration: underline; 
+  }
+
+
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
 
 .home-button {
     font-family: Montserrat, sans-serif;
@@ -181,6 +263,9 @@ footer {
 .portfolio {
     display: grid;
     height: 100%;
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 20px;
 }
 
 .portfolio-item {
@@ -191,6 +276,33 @@ footer {
     justify-content: center;
     align-items: center;
 }
+
+.portfolio-item.small{
+    grid-row: span 1;
+    grid-column: span 1;
+}
+
+.portfolio-item.medium{ 
+    grid-row: span 2;
+    grid-column: span 2;
+
+}
+
+.portfolio-item.large {
+    grid-row: span 3;
+    grid-column: span 3;
+}
+
+.portfolio-item.wide {
+    grid-row: span 2;
+    grid-column: span 3;
+}
+
+.portfolio-item.tall {
+    grid-row: span 3;
+    grid-column: span 2;
+}
+
 
 .page-title {
     font-family: Montserrat, sans-serif;
@@ -479,17 +591,9 @@ div.active#third-tab-div {
 }
 
 .github {
-
     height: 40px;
     width: 40px;
 }
 
-img {
-    -webkit-transition: -webkit-transform .8s ease-in-out;
-    transition:         transform .8s ease-in-out;
-}
-img:hover {
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
+
+
