--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -10,12 +10,12 @@
         </div>
         <div class="project-grid">
             <div class="portfolio">
-                <div class="portfolio-item">one</div>
-                <div class="portfolio-item">two</div>
-                <div class="portfolio-item">three</div>
-                <div class="portfolio-item">four</div>
-                <div class="portfolio-item">five</div>
-                <div class="portfolio-item">six</div>
+                <div class="portfolio-item medium">one</div>
+                <div class="portfolio-item large">two</div>
+                <div class="portfolio-item medium">three</div>
+                <div class="portfolio-item small">four</div>
+                <div class="portfolio-item tall">five</div>
+                <div class="portfolio-item wide">six</div>
             </div>
         </div>
     </div>
