--- a/app/templates/nav-menu.html
+++ b/app/templates/nav-menu.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}" />
     </head>
     <body>
-        <div class="nav-menu" data-collapse="medium" data-animation="default" data-duration="400" role="banner">
+        <div class="nav-menu" id="nav-menu" data-collapse="medium" data-animation="default" data-duration="400" role="banner">
             <div class="nav-items">
                 <div class="nav-wrapper">
                     <nav role="navigation" class="nav-items-in-menu">
@@ -13,7 +13,20 @@
                         <a href="{{ url_for('projects')}}" aria-current="page" class="about-button">PROJECTS</a>
                         <a href="https://www.linkedin.com/in/sam-merkovitz" aria-current="page" class="about-button" target="__blank">LINKEDIN</a>
                         
+                        
                     </nav>
+                    <div class="sidenav-menu" >
+                        <img onclick="openNav()" class="menu-icon" alt="" src="{{ url_for('static', filename='img/menu-icon.png') }}"></img>
+                        <div class="sidenav"id=mySideNav>
+                            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                            <a href='/index' aria-current="page" class="home-button">HOME</a>
+                            <a href='/index#education-container' aria-current="page" class="about-button">ABOUT</a>
+                            <a href='/index#experience-section' aria-current="page" class="about-button">EXPERIENCE</a>
+                            <a href="{{ url_for('projects')}}" aria-current="page" class="about-button">PROJECTS</a>
+                            <a href="https://www.linkedin.com/in/sam-merkovitz" aria-current="page" class="about-button" target="__blank">LINKEDIN</a>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
