finalized projects section

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -53,60 +53,75 @@
             Experience
         </h1>
         <p id="first-exp">
-            <strong>Genentech</strong> dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
-        </p>
+            I worked at <strong>Genentech's Development Sciences Informatics Data Management division</strong> from July 2020 through Decmeber 2020 as a Data Management Operations. I was responsible for desiging a database to track the operations of the data management team, as well as design an interface for them to interact with it. The tools and languages I used were PostgreSQL, Python, Google Apps Scripts, Tableau.
         <p id="second-exp">
-            <strong>Harvard Medical School Office for External Education</strong> ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
+            I worked at <strong>Harvard Medical School Office for External Education</strong> from July 2019 through December 2020 as a Business Development Coordinator. I worked across the office's many business units doing market research, sales outreach, and follow up to 25+ potential clients. I evaluated 40+ international schools and 90+ attendees for a symposium to determine sales opportunities. I also established a baseline for data driven market research by creating a prediction algorithm that measured how likely an institution would purchase one of our products. And finally, systematized and reported on several different Salesforce objects in order to streamline sales opportunities and data integrations as well as visualize current pipeline and revenue forecasts. 
         </p>
         <p id="third-exp">
-            <strong>MullenLowe</strong> ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
+            I worked at <strong>MullenLowe</strong> from July 2018 through December 2020 as a Quality Assurance Specialist. I built and collaborated on 3 responsive websites throughout their campaign lifecycles using HMTL/CSS, Javascript, Ruby on Rails, and Python as well as developed and tested digital products (websites, banner ads, email blasts) for 5 clients during my six month time period. 
         </p>
     </div>
 </section>
 
-<section class="projects-tab" id="projects-section" style="display: none;">
+<section class="projects-tab" id="projects-section">
     <div> 
         <h1 class="section-header">
             Projects
         </h1>
     </div>
-    <br />
-    <br />
-    <br />
-    <div class="tabs">
-        <div class="tab-header">
-            <div class="active" id="first-tab">College Basketball</div>
-            <div id="second-tab">Property Tax</div>
-            <div id="third-tab">World Happiness</div>
-        </div>
-        <div class="tab-content">
-            <div class="active" id="first-tab-div" style="color: black;">
-                <h4>
-                    Predicting College Basketball Game Winners using Machine Learning
-                </h4>
-                <p>
-                    Final Project for CS4100 - Artificial IntelligenceBased on Kaggle's March Madness Competition, created machine learning models to best predict the outcomes of college basketball games. Created four feature sets using available data from the competition according to different statistical models used for common analysis and prediction methods.Machine Learning models used: Logistic Regression, Random Forest, Naive Bayes, ANNLibraries Used: Pandas, Numpy, Matplot, Seaborn, Scikit Learn, Tensorflow
-                </p>
-                <a href="https://github.com/samMerkovitz/College-Basketball-Predictions" target="__blank"><img class="github"  src="../static/img/github logo.png" /></a>
+    <section class="projects">
+        <details open>
+          <summary>
+              This Website!
+            </summary>
+          <div>
+            <p>
+                I created this website as a fun project to explore different web development and design options. This is a Node.JS website and all of the HTML, CSS, and Javascript was developed by me. I hope you've enjoyed it!
+            </p>
+            <br />
+            <div class="github-link">
+                <a href="https://github.com/samMerkovitz/Personal-Website" target="__blank" class="github-link">View this project on Github</a>
             </div>
-            <div id="second-tab-div">
-                <h4>
-                    Boston Property Tax Dataset Analysis
-                </h4>
-                <p>
-                    Explored Boston Property Tax dataset from the Boston Area Research Initiative with intent of forming a public policy proposal based on findingsProposed a methodology to measure change in urbanization in Boston based on year-over-year changes in the dataset. Used ANOVA, Correlation/Pearson’s R, ggplot2, and other libraries in order to run analyses and create visualizations
-                </p>
+          </div>
+        </details>
+        <details>
+            <summary>
+                Predicting College Basketball Game Winners using Machine Learning
+              </summary>
+            <div>
+              <p>
+                  Final Project for CS4100 - Artificial IntelligenceBased on Kaggle's March Madness Competition, created machine learning models to best predict the outcomes of college basketball games. Created four feature sets using available data from the competition according to different statistical models used for common analysis and prediction methods.Machine Learning models used: Logistic Regression, Random Forest, Naive Bayes, ANNLibraries Used: Pandas, Numpy, Matplot, Seaborn, Scikit Learn, Tensorflow
+              </p>
+              <br />
+              <div class="github-link">
+                  <a href="https://github.com/samMerkovitz/College-Basketball-Predictions" target="__blank" class="github-link">View this project on Github</a>
+              </div>
             </div>
-            <div id="third-tab-div">
-                <h4>
-                    World Happiness Ratings Analysis
-                </h4>
-                <p>
-                    Exploratory Data Analysis of the World Happiness Scores from a Kaggle dataset (linked in the python notebook). This project examines the relationship between category values and a country's happiness score. This project uses Economy/GDP ratings to examine this relationship.Libraries Used: Pandas, Numpy, Matplot, Seaborn
-                </p>
-                <a href="https://github.com/samMerkovitz/College-Basketball-Predictions" target="__blank"><img class="github"  src="../static/img/github logo.png" /></a>
+          </details>
+        <details>
+          <summary>
+              World Happiness Ratings Analysis
+            </summary>
+          <div>
+            <p>
+                Exploratory Data Analysis of the World Happiness Scores from a Kaggle dataset (linked in the python notebook). This project examines the relationship between category values and a country's happiness score. This project uses Economy/GDP ratings to examine this relationship.Libraries Used: Pandas, Numpy, Matplot, Seaborn
+            </p>
+            <div class="github-link">
+                <a href="https://github.com/samMerkovitz/World-Happiness-Analysis" target="__blank" class="github-link">View this project on Github</a>
             </div>
-    </div>
+          </div>
+        </details>
+        <details>
+            <summary>
+                Boston Property Tax Dataset Analysis
+              </summary>
+            <div>
+              <p>
+                  Explored Boston Property Tax dataset from the Boston Area Research Initiative with intent of forming a public policy proposal based on findingsProposed a methodology to measure change in urbanization in Boston based on year-over-year changes in the dataset. Used ANOVA, Correlation/Pearson’s R, ggplot2, and other libraries in order to run analyses and create visualizations
+              </p>
+            </div>
+          </details>
+      </section>
 </section>
 
 
