--- a/app/templates/nav-menu.html
+++ b/app/templates/nav-menu.html
@@ -10,7 +10,7 @@
                         <a href='/index' aria-current="page" class="home-button">HOME</a>
                         <a href='/index#education-container' aria-current="page" class="about-button">ABOUT</a>
                         <a href='/index#experience-section' aria-current="page" class="about-button">EXPERIENCE</a>
-                        <a href="{{ url_for('projects')}}" aria-current="page" class="about-button">PROJECTS</a>
+                        <a href="/index#projects-section" aria-current="page" class="about-button">PROJECTS</a>
                         <a href="https://www.linkedin.com/in/sam-merkovitz" aria-current="page" class="about-button" target="__blank">LINKEDIN</a>
                         
                         
@@ -22,7 +22,7 @@
                             <a href='/index' aria-current="page" class="home-button">HOME</a>
                             <a href='/index#education-container' aria-current="page" class="about-button">ABOUT</a>
                             <a href='/index#experience-section' aria-current="page" class="about-button">EXPERIENCE</a>
-                            <a href="{{ url_for('projects')}}" aria-current="page" class="about-button">PROJECTS</a>
+                            <a href="/index#projects-section" aria-current="page" class="about-button">PROJECTS</a>
                             <a href="https://www.linkedin.com/in/sam-merkovitz" aria-current="page" class="about-button" target="__blank">LINKEDIN</a>
                         </div>
 
