--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -13,6 +13,7 @@ body {
 
 html {
     cursor: url('../img/hand-cursor.png'), auto;
+    overflow-x: hidden; 
 }
 
 a {
@@ -119,21 +120,7 @@ footer {
     display: flex;
 }
 
-.dropdown {
-    font-size: 2.4em;
-    line-height: 50px;
-    display: none;
- }
 
-/* Style the dropdown content (hidden by default) */
-.dd-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
 
  .menu-icon {
     display: none;
@@ -155,7 +142,6 @@ footer {
 
 
     .menu-icon {
-        
         display: flex;
     }
 
@@ -222,6 +208,20 @@ footer {
     text-decoration: none;
 }
 
+.github-link {
+    font-family: Montserrat, sans-serif;
+    font-size: 16px;
+    line-height: 32px;
+    font-weight: 500px;
+    padding-top: 15px;
+    padding-bottom: 9px;
+    padding-right: 20px;
+    color: inherit;
+    text-decoration: none;
+    float: left;
+    clear: left;
+}
+
 .education_section {
     display: block;
 
@@ -254,54 +254,6 @@ footer {
 
 }
 
-.project-grid {
-    padding: 10%;
-    flex: 1 1 80%;
-
-}
-
-.portfolio {
-    display: grid;
-    height: 100%;
-    grid-template-rows: repeat(6, 1fr);
-    grid-template-columns: repeat(5, 1fr);
-    grid-gap: 20px;
-}
-
-.portfolio-item {
-    background: white;
-    color: black;
-    font-weight: 400;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.portfolio-item.small{
-    grid-row: span 1;
-    grid-column: span 1;
-}
-
-.portfolio-item.medium{ 
-    grid-row: span 2;
-    grid-column: span 2;
-
-}
-
-.portfolio-item.large {
-    grid-row: span 3;
-    grid-column: span 3;
-}
-
-.portfolio-item.wide {
-    grid-row: span 2;
-    grid-column: span 3;
-}
-
-.portfolio-item.tall {
-    grid-row: span 3;
-    grid-column: span 2;
-}
 
 
 .page-title {
@@ -340,66 +292,6 @@ footer {
     padding-left: 20%
 }
 
-.projects-grid-container {
-    display: grid;
-    grid-gap: 50px 50px;
-    padding: 5%;
-    grid-template-areas:
-    'item1 item1 item1 item2 item2'
-    'item3 item3 item4 item4 item4'
-    'item5 item5 item5 item6 item6';
-}
-
-.grid-projects-item1, .grid-projects-item4, .grid-projects-item5 {
-    padding: 3%;
-    border-radius: 25px;
-}
-
-.grid-projects-item1 {
-    grid-area: item1;
-}
-
-.grid-projects-item1:hover {
-    grid-area: item1;
-    box-shadow: 10px 10px 10px #888888;
-}
-
-.grid-projects-item2 {
-    grid-area: item2;
-    padding-left: 10%;
-}
-
-.grid-projects-item3 {
-    grid-area: item3;
-    padding-right: 10%
-}
-
-.grid-projects-item4 {
-    grid-area: item4;
-
-}
-
-.grid-projects-item4:hover {
-    grid-area: item4;
-    box-shadow: 10px 10px 10px #888888;
-}
-
-
-.grid-projects-item5 {
-    grid-area: item5;
-}
-
-.grid-projects-item5:hover {
-    grid-area: item5;
-    box-shadow: 10px 10px 10px #888888;
-    
-}
-
-
-.grid-projects-item6 {
-    grid-area: item6;
-    padding-left: 10%;
-}
 
 .about-me-p {
     font-family: 'Libre Baskerville', serif; 
@@ -420,100 +312,8 @@ footer {
 }    
 
 
-.tabs {
-    margin-left: 50%;
-    margin-top: 200px;
-    transform:translate(-50%,-50%);
-    height:50%;
-}
 
-.tabs .tab-header {
-    display:flex;
-    height:80px;
-}
 
-.tabs .tab-header > div {
-    position:relative;
-    width:calc(100% / 3);
-    height:100%;
-    text-align:center;
-    line-height:80px;
-    font-weight:600;
-    color:black;
-
-    z-index:2;
-}
-
-#first-tab {
-    background-color: aqua;
-}
-
-#second-tab {
-    background-color: pink;
-}
-
-#third-tab {
-    background-color: yellow;
-}
-
-.tabs .tab-header > div:before {
-    content:"";
-    position:absolute;
-    bottom:0px;
-    left:0px;
-    width:100%;
-    height:0%;
-    background:white;
-    z-index:-1;
-  }
-  .tabs .tab-header > div:hover:before {
-    transition:all 300ms ease-in-out;
-    height:5%;
-  }
-  .tabs .tab-header > div.active {
-    color:#00acee;
-  }
-  .tabs .tab-header > div.active:before {
-    transition:all 300ms ease-in-out;
-    height:100%;
-  }
-  .tabs .tab-content {
-    position:relative;
-    background:aqua;
-    height:calc(100% - 80px);
-    overflow:hidden;
-  }
-  .tabs .tab-content > div {
-    position:absolute;
-    transform:scale(0.5);
-    opacity:0;
-    top:200%;
-    padding:20px;
-    transition:all 500ms ease-in-out;
-  }
-  .tabs .tab-content > div.active {
-    transform:scale(1);
-    opacity:1;
-    top:0%;
-  }
-
-div.active#first-tab {
-    background-color: aqua;
-    color: black;
-    height: 100%;
-}
-
-div.active#second-tab-div {
-    background-color: pink;
-    color: white;
-    height: 100%;
-  }
-
-div.active#third-tab-div {
-    background-color: yellow;
-    color: black;
-    height: 100%;
-  }
 /* Scroll Down */
 
 .scrolldown-wrapper {
@@ -561,39 +361,116 @@ div.active#third-tab-div {
 	}
 }
 
-.tabbed-projects {
-
-    width: 75%;
-    height: 75%;
-    -webkit-transition: -webkit-transform 0.4s ease;
-    transition: -webkit-transform 0.4s ease;
-    transition: transform 0.4s ease;
-    transition: transform 0.4s ease, -webkit-transform 0.4s ease;
-    -webkit-transform: translateX(100%);
-            transform: translateX(100%);
-    background-color: #f06868;
-}
-
-.tabbed-projects div:nth-of-type(1) {
-    background-color: #f06868;
-}
-
-.tabbed-projects div:nth-of-type(2) {
-    background-color: #fab57a;
-}
-
-.tabbed-projects div:nth-of-type(3) {
-    background-color: #edf798;
-}
-
-.tabbed-projects div:nth-of-type(4) {
-    background-color: #80d6ff;
-}
-
-.github {
-    height: 40px;
-    width: 40px;
-}
 
 
 
+
+
+
+.projects {
+    margin: 10% auto;
+    margin-top: 0;
+    color: #fff;
+    width: 80%;
+
+  }
+  
+  summary {
+    display: block;
+    padding: 10px;
+    font-family: "Space Mono", monospace;
+    font-size: 22px;
+    transition: .3s;
+    border-bottom: 2px solid;
+    user-select: none;
+  }
+  
+  details > div {
+    display: block;
+    flex-wrap: wrap;
+    overflow: auto;
+    height: 100%;
+    user-select: none;
+    padding: 0 20px;
+    font-family: "Karla", sans-serif;
+    line-height: 1.5;
+  }
+  
+  details > div > img {
+    align-self: flex-start;
+    max-width: 100%;
+    margin-top: 20px;
+  }
+  
+  details > div > p {
+    flex: 1;
+  }
+  
+  details[open] > summary {
+     color: yellow;
+  }
+  
+  @media (min-width: 768px) {
+    details[open] > div > p {
+      opacity: 0;
+      animation-name: showContent;
+      animation-duration: 0.6s;
+      animation-delay: 0.2s;
+      animation-fill-mode: forwards;
+      margin: 0;
+      padding-left: 20px;
+    }
+  
+    details[open] > div {
+      animation-name: slideDown;
+      animation-duration: 0.3s;
+      animation-fill-mode: forwards;
+    }
+  
+    details[open] > div > img {
+      opacity: 0;
+      height: 100%;
+      margin: 0;
+      animation-name: showImage;
+      animation-duration: 0.3s;
+      animation-delay: 0.15s;
+      animation-fill-mode: forwards;
+    }
+  }
+  
+  @keyframes slideDown {
+    from {
+      opacity: 0;
+      height: 0;
+      padding: 0;
+    }
+  
+    to {
+      opacity: 1;
+      height: var(--contentHeight);
+      padding: 20px;
+    }
+  }
+  
+  @keyframes showImage {
+    from {
+      opacity: 0;
+      clip-path: inset(50% 0 50% 0);
+      transform: scale(0.4);
+    }
+  
+    to {
+      opacity: 1;
+      clip-path: inset(0 0 0 0);
+    }
+  }
+  
+  @keyframes showContent {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  
