--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -42,6 +42,7 @@
                 <option>Database Design</option>
                 <option>PostgreSQL</option> 
             </select>. 
+            I'm enthused by thinking about how technology and data can be leveraged into everyday life and our decision making as we enter a world that is becoming more and more connected. 
 
         </p>
     </div>
