--- a/public/app/templates/index.html
+++ b/public/app/templates/index.html
@@ -1,146 +1,172 @@
-{% extends "nav-menu.html" %}
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="styles/main.css" />
+    </head>
+    <body>
+        <div class="nav-menu" id="nav-menu" data-collapse="medium" data-animation="default" data-duration="400" role="banner">
+            <div class="nav-items">
+                <div class="nav-wrapper">
+                    <nav role="navigation" class="nav-items-in-menu">
+                        <a href='/index' aria-current="page" class="home-button">HOME</a>
+                        <a href='/index#education-container' aria-current="page" class="about-button">ABOUT</a>
+                        <a href='/index#experience-section' aria-current="page" class="about-button">EXPERIENCE</a>
+                        <a href="/index#projects-section" aria-current="page" class="about-button">PROJECTS</a>
+                        <a href="https://www.linkedin.com/in/sam-merkovitz" aria-current="page" class="about-button" target="__blank">LINKEDIN</a>
+                        
+                        
+                    </nav>
+                    <div class="sidenav-menu" >
+                        <img onclick="openNav()" class="menu-icon" alt="" src="{{ url_for('static', filename='img/menu-icon.png') }}"></img>
+                        <div class="sidenav"id=mySideNav>
+                            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                            <a href='/index' aria-current="page" class="home-button">HOME</a>
+                            <a href='/index#education-container' aria-current="page" class="about-button">ABOUT</a>
+                            <a href='/index#experience-section' aria-current="page" class="about-button">EXPERIENCE</a>
+                            <a href="/index#projects-section" aria-current="page" class="about-button">PROJECTS</a>
+                            <a href="https://www.linkedin.com/in/sam-merkovitz" aria-current="page" class="about-button" target="__blank">LINKEDIN</a>
+                        </div>
 
-{% block content %}
-<section class="header-section" >
-    <div class="header-container">
-        <div class="header-wrapper">
-            <h1 class="welcome-header">Hey there! Welcome to my website.</h1>
-            <div class="scrolldown-wrapper">
-                <div class="scrolldown">
-                    <svg height="30" width="10">
-                        <circle class="scrolldown-p1" cx="5" cy="15" r="2" />
-                        <circle class="scrolldown-p2" cx="5" cy="15" r="2" />
-                    </svg>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
 
+        
 
-<section class="education-section" id="education-container">
-    <div class="education-container" >
-        <h1 class="section-header" style="font-family: 'Libre Baskerville', serif;">
-            About Me
-        </h1>
-        <p class="about-me-p">
-            I am a Northeastern University Student (Class of 2021) studying Computer Science and Philosophy with a minor in Computational Social Sciences. I am interested in 
-            <select class="about-me-select">
-                <option>creating websites</option>
-                <option>using data to make decisions</option>
-                <option>fitness</option>
-                <option>reading</option>
-            </select>. 
-            I am skilled at 
-            <select class="about-me-select">
-                <option>HTML/CSS</option>
-                <option>Javascript</option>
-                <option> Python</option>
-                <option>Java</option>
-                <option>Google Apps Scripts</option>
-                <option>Github</option> 
-                <option>Database Design</option>
-                <option>PostgreSQL</option> 
-            </select>. 
-            I'm enthused by thinking about how technology and data can be leveraged into everyday life and our decision making as we enter a world that is becoming more and more connected. 
-
-        </p>
-    </div>
-</section>
-
-<section class="experience-section" id="experience-section">
-    <div class="experience-container">
-        <h1 class="section-header">
-            Experience
-        </h1>
-        <p id="first-exp">
-            I worked at <strong>Genentech's Development Sciences Informatics Data Management division</strong> from July 2020 through Decmeber 2020 as a Data Management Operations. I was responsible for desiging a database to track the operations of the data management team, as well as design an interface for them to interact with it. The tools and languages I used were PostgreSQL, Python, Google Apps Scripts, Tableau.
-        <p id="second-exp">
-            I worked at <strong>Harvard Medical School Office for External Education</strong> from July 2019 through December 2020 as a Business Development Coordinator. I worked across the office's many business units doing market research, sales outreach, and follow up to 25+ potential clients. I evaluated 40+ international schools and 90+ attendees for a symposium to determine sales opportunities. I also established a baseline for data driven market research by creating a prediction algorithm that measured how likely an institution would purchase one of our products. And finally, systematized and reported on several different Salesforce objects in order to streamline sales opportunities and data integrations as well as visualize current pipeline and revenue forecasts. 
-        </p>
-        <p id="third-exp">
-            I worked at <strong>MullenLowe</strong> from July 2018 through December 2020 as a Quality Assurance Specialist. I built and collaborated on 3 responsive websites throughout their campaign lifecycles using HMTL/CSS, Javascript, Ruby on Rails, and Python as well as developed and tested digital products (websites, banner ads, email blasts) for 5 clients during my six month time period. 
-        </p>
-    </div>
-</section>
-
-<section class="projects-tab" id="projects-section">
-    <div> 
-        <h1 class="section-header">
-            Projects
-        </h1>
-    </div>
-    <section class="projects">
-        <details open>
-          <summary>
-              This Website!
-            </summary>
-          <div>
-            <p>
-                I created this website as a fun project to explore different web development and design options. This is a Node.JS website and all of the HTML, CSS, and Javascript was developed by me. I hope you've enjoyed it!
-            </p>
-            <br />
-            <div class="github-link">
-                <a href="https://github.com/samMerkovitz/Personal-Website" target="__blank" class="github-link">View this project on Github</a>
+        <section class="header-section" >
+            <div class="header-container">
+                <div class="header-wrapper">
+                    <h1 class="welcome-header">Hey there! Welcome to my website.</h1>
+                    <div class="scrolldown-wrapper">
+                        <div class="scrolldown">
+                            <svg height="30" width="10">
+                                <circle class="scrolldown-p1" cx="5" cy="15" r="2" />
+                                <circle class="scrolldown-p2" cx="5" cy="15" r="2" />
+                            </svg>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </details>
-        <details>
-            <summary>
-                Predicting College Basketball Game Winners using Machine Learning
-              </summary>
-            <div>
-              <p>
-                  Final Project for CS4100 - Artificial IntelligenceBased on Kaggle's March Madness Competition, created machine learning models to best predict the outcomes of college basketball games. Created four feature sets using available data from the competition according to different statistical models used for common analysis and prediction methods.Machine Learning models used: Logistic Regression, Random Forest, Naive Bayes, ANNLibraries Used: Pandas, Numpy, Matplot, Seaborn, Scikit Learn, Tensorflow
-              </p>
-              <br />
-              <div class="github-link">
-                  <a href="https://github.com/samMerkovitz/College-Basketball-Predictions" target="__blank" class="github-link">View this project on Github</a>
-              </div>
+        </section>
+
+
+        <section class="education-section" id="education-container">
+            <div class="education-container" >
+                <h1 class="section-header" style="font-family: 'Libre Baskerville', serif;">
+                    About Me
+                </h1>
+                <p class="about-me-p">
+                    I am a Northeastern University Student (Class of 2021) studying Computer Science and Philosophy with a minor in Computational Social Sciences. I am interested in 
+                    <select class="about-me-select">
+                        <option>creating websites</option>
+                        <option>using data to make decisions</option>
+                        <option>fitness</option>
+                        <option>reading</option>
+                    </select>. 
+                    I am skilled at 
+                    <select class="about-me-select">
+                        <option>HTML/CSS</option>
+                        <option>Javascript</option>
+                        <option> Python</option>
+                        <option>Java</option>
+                        <option>Google Apps Scripts</option>
+                        <option>Github</option> 
+                        <option>Database Design</option>
+                        <option>PostgreSQL</option> 
+                    </select>. 
+                    I'm enthused by thinking about how technology and data can be leveraged into everyday life and our decision making as we enter a world that is becoming more and more connected. 
+
+                </p>
             </div>
-          </details>
-        <details>
-          <summary>
-              World Happiness Ratings Analysis
-            </summary>
-          <div>
-            <p>
-                Exploratory Data Analysis of the World Happiness Scores from a Kaggle dataset (linked in the python notebook). This project examines the relationship between category values and a country's happiness score. This project uses Economy/GDP ratings to examine this relationship.Libraries Used: Pandas, Numpy, Matplot, Seaborn
-            </p>
-            <div class="github-link">
-                <a href="https://github.com/samMerkovitz/World-Happiness-Analysis" target="__blank" class="github-link">View this project on Github</a>
+        </section>
+
+        <section class="experience-section" id="experience-section">
+            <div class="experience-container">
+                <h1 class="section-header">
+                    Experience
+                </h1>
+                <p id="first-exp">
+                    I worked at <strong>Genentech's Development Sciences Informatics Data Management division</strong> from July 2020 through Decmeber 2020 as a Data Management Operations. I was responsible for desiging a database to track the operations of the data management team, as well as design an interface for them to interact with it. The tools and languages I used were PostgreSQL, Python, Google Apps Scripts, Tableau.
+                <p id="second-exp">
+                    I worked at <strong>Harvard Medical School Office for External Education</strong> from July 2019 through December 2020 as a Business Development Coordinator. I worked across the office's many business units doing market research, sales outreach, and follow up to 25+ potential clients. I evaluated 40+ international schools and 90+ attendees for a symposium to determine sales opportunities. I also established a baseline for data driven market research by creating a prediction algorithm that measured how likely an institution would purchase one of our products. And finally, systematized and reported on several different Salesforce objects in order to streamline sales opportunities and data integrations as well as visualize current pipeline and revenue forecasts. 
+                </p>
+                <p id="third-exp">
+                    I worked at <strong>MullenLowe</strong> from July 2018 through December 2020 as a Quality Assurance Specialist. I built and collaborated on 3 responsive websites throughout their campaign lifecycles using HMTL/CSS, Javascript, Ruby on Rails, and Python as well as developed and tested digital products (websites, banner ads, email blasts) for 5 clients during my six month time period. 
+                </p>
             </div>
-          </div>
-        </details>
-        <details>
-            <summary>
-                Boston Property Tax Dataset Analysis
-              </summary>
-            <div>
-              <p>
-                  Explored Boston Property Tax dataset from the Boston Area Research Initiative with intent of forming a public policy proposal based on findingsProposed a methodology to measure change in urbanization in Boston based on year-over-year changes in the dataset. Used ANOVA, Correlation/Pearson’s R, ggplot2, and other libraries in order to run analyses and create visualizations
-              </p>
+        </section>
+
+        <section class="projects-tab" id="projects-section">
+            <div> 
+                <h1 class="section-header">
+                    Projects
+                </h1>
             </div>
-          </details>
-      </section>
-</section>
+            <section class="projects">
+                <details open>
+                <summary>
+                    This Website!
+                    </summary>
+                <div>
+                    <p>
+                        I created this website as a fun project to explore different web development and design options. This is a Node.JS website and all of the HTML, CSS, and Javascript was developed by me. I hope you've enjoyed it!
+                    </p>
+                    <br />
+                    <div class="github-link">
+                        <a href="https://github.com/samMerkovitz/Personal-Website" target="__blank" class="github-link">View this project on Github</a>
+                    </div>
+                </div>
+                </details>
+                <details>
+                    <summary>
+                        Predicting College Basketball Game Winners using Machine Learning
+                    </summary>
+                    <div>
+                    <p>
+                        Final Project for CS4100 - Artificial IntelligenceBased on Kaggle's March Madness Competition, created machine learning models to best predict the outcomes of college basketball games. Created four feature sets using available data from the competition according to different statistical models used for common analysis and prediction methods.Machine Learning models used: Logistic Regression, Random Forest, Naive Bayes, ANNLibraries Used: Pandas, Numpy, Matplot, Seaborn, Scikit Learn, Tensorflow
+                    </p>
+                    <br />
+                    <div class="github-link">
+                        <a href="https://github.com/samMerkovitz/College-Basketball-Predictions" target="__blank" class="github-link">View this project on Github</a>
+                    </div>
+                    </div>
+                </details>
+                <details>
+                <summary>
+                    World Happiness Ratings Analysis
+                    </summary>
+                <div>
+                    <p>
+                        Exploratory Data Analysis of the World Happiness Scores from a Kaggle dataset (linked in the python notebook). This project examines the relationship between category values and a country's happiness score. This project uses Economy/GDP ratings to examine this relationship.Libraries Used: Pandas, Numpy, Matplot, Seaborn
+                    </p>
+                    <div class="github-link">
+                        <a href="https://github.com/samMerkovitz/World-Happiness-Analysis" target="__blank" class="github-link">View this project on Github</a>
+                    </div>
+                </div>
+                </details>
+                <details>
+                    <summary>
+                        Boston Property Tax Dataset Analysis
+                    </summary>
+                    <div>
+                    <p>
+                        Explored Boston Property Tax dataset from the Boston Area Research Initiative with intent of forming a public policy proposal based on findingsProposed a methodology to measure change in urbanization in Boston based on year-over-year changes in the dataset. Used ANOVA, Correlation/Pearson’s R, ggplot2, and other libraries in order to run analyses and create visualizations
+                    </p>
+                    </div>
+                </details>
+            </section>
+        </section>
 
 
 
 
-<!-- 
-<section class="tabbed-projects">
-    <div class="accordion-container">
-        <input type="radio" name="name" checked="checked"/>
-        <div ></div>
-        <input type="radio" name="name"/>
-        <div ></div>
-        <input type="radio" name="name"/>
-        <div ></div>
-        <input type="radio" name="name"/>
-        <div ></div>
-    </div>
-</section> -->
+<script src="static/javascript/jquery.js"></script> 
+<script src="static/javascript/fadein.js"></script> 
 
-    
-{% endblock %}
+</body>
+
+
+
+
+
+</html>
