--- a/app/templates/nav-menu.html
+++ b/app/templates/nav-menu.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}" />
+        <link rel="stylesheet" type="text/css" href="../static/styles/main.css" />
     </head>
     <body>
         <div class="nav-menu" id="nav-menu" data-collapse="medium" data-animation="default" data-duration="400" role="banner">
