--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -135,9 +135,14 @@ footer {
 
 
 
-@media (max-width: 768px) {
+@media handheld, screen and (max-width: 768px) {
     .nav-items-in-menu {
         display: none;
+
+    }
+
+    .scrolldown {
+      display: none;
     }
 
 
@@ -266,13 +271,14 @@ summary {
     color: yellow;
  }
  
- @media (min-width: 768px) {
+ @media handheld, screen and (min-width: 768px) {
    details[open] > div > p {
      opacity: 0;
      animation-name: showContent;
      animation-duration: 0.6s;
      animation-delay: 0.2s;
      animation-fill-mode: forwards;
+
      margin: 0;
      padding-left: 20px;
    }
@@ -478,6 +484,7 @@ summary {
     line-height: 1.5;
   }
   
+
   details > div > img {
     align-self: flex-start;
     max-width: 100%;
@@ -492,7 +499,7 @@ summary {
      color: yellow;
   }
   
-  @media (min-width: 768px) {
+  @media handheld, screen and (min-width: 768px) {
     details[open] > div > p {
       opacity: 0;
       animation-name: showContent;
